--- a/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -339,7 +339,7 @@ ToolbarOpenBPClass.ListHiddenColumns=Class
 LastLevel=/Game/ThirdPerson/Start_Screen
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -401,8 +401,8 @@ Screen_Buttons_C.Rendering=True
 Screen_Buttons_C.Navigation=True
 Screen_Buttons_C.Designer=True
 Screen_Buttons_C.Accessibility=True
-Border.Content=True
-Border.Appearance=False
+Border.Content=False
+Border.Appearance=True
 Border.Accessibility=False
 Border.Behavior=False
 Border.Render Transform=False
@@ -985,23 +985,25 @@ bNavigationToolVisible=False
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=15.000000,G=1.000000,B=1.000000,A=1.000000)
-Color1=(R=120.000000,G=1.000000,B=1.000000,A=1.000000)
-Color2=(R=2.060394,G=1.000000,B=1.000000,A=1.000000)
-Color3=(R=2.060394,G=1.000000,B=1.000000,A=1.000000)
+Color0=(R=0.000000,G=0.000000,B=0.526042,A=1.000000)
+Color1=(R=0.000000,G=0.000000,B=0.255208,A=1.000000)
+Color2=(R=15.000000,G=1.000000,B=1.000000,A=1.000000)
+Color3=(R=120.000000,G=1.000000,B=1.000000,A=1.000000)
 Color4=(R=2.060394,G=1.000000,B=1.000000,A=1.000000)
-Color5=(R=4.923452,G=0.893296,B=1.000000,A=1.000000)
-Color6=(R=177.585831,G=0.000000,B=1.000000,A=1.000000)
-Color7=(R=177.585831,G=0.633062,B=1.000000,A=1.000000)
-Color8=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
+Color5=(R=2.060394,G=1.000000,B=1.000000,A=1.000000)
+Color6=(R=2.060394,G=1.000000,B=1.000000,A=1.000000)
+Color7=(R=4.923452,G=0.893296,B=1.000000,A=1.000000)
+Color8=(R=177.585831,G=0.000000,B=1.000000,A=1.000000)
+Color9=(R=177.585831,G=0.633062,B=1.000000,A=1.000000)
+Color10=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 
 [DetailPropertyExpansion]
 Button="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-ContentWidget="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-PanelWidget="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Widget=
-Visual=
-Object=
+ContentWidget=
+PanelWidget=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Font\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Image="\"Object.Appearance.Brush\" "
@@ -1023,7 +1025,7 @@ FractureModeCustomizationSettings="\"Object.Fracture Mode.Fracture Mode|UI Custo
 ModelingToolsModeCustomizationSettings="\"Object.Modeling Mode.Modeling Mode|UI Customization\" \"Object.Modeling Mode.Modeling Mode|Tool Assets\" \"Object.Modeling Mode.Modeling Mode|Mesh Element Selection Mode\" "
 ModelingComponentsEditorSettings="\"Object.Modeling Tools.Modeling Tools|Work Plane Configuration\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
-Border="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+Border=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1081,18 +1083,21 @@ GraphEditorQuickJumps=()
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/Screen_Buttons.Screen_Buttons=0
 /Game/ThirdPerson/Blueprints/AG.AG=0
+/Game/ThirdPerson/Start_Screen.Start_Screen:PersistentLevel.Start_Screen=0
+/Game/ThirdPerson/Blueprints/WB_ScreenButtons.WB_ScreenButtons=0
+/Game/ThirdPerson/Blueprints/WB_InfoPage.WB_InfoPage=0
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=684.000
-WindowSize=X=1282.000 Y=722.000
+WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/ThirdPerson
+UNR=../../../../../../Users/2406616.UCREATIVE/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/ThirdPerson
 BRUSH=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/
 FBX=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/
 FBXAnim=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/
-GenericImport=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/
+GenericImport=../../../../../../Users/2406616.UCREATIVE/Downloads/image-here-placeholder.jpg
 GenericExport=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/
 GenericOpen=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/
 GenericSave=../../../../../../Users/2406616/Documents/GitHub/Team_4_Plunder_Party/Plunder_Party/Content/
