default level start

--- a/Plunder_Party/Config/DefaultEngine.ini
+++ b/Plunder_Party/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=Plunder_Party
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
-GameDefaultMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
+EditorStartupMap=/Game/ThirdPerson/Start_Screen.Start_Screen
+GameDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+ServerDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
