--- a/Plunder_Party/Plunder_Party.uproject
+++ b/Plunder_Party/Plunder_Party.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{F3D80F31-47FE-B247-9DED-3E8C97C79621}",
+	"EngineAssociation": "5.6",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
