static cam & spawning players

--- a/Plunder_Party/Plunder_Party.uproject
+++ b/Plunder_Party/Plunder_Party.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{91BEC030-4CA4-4AC0-4604-2DBBC8B24507}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
