--- a/Plunder_Party/Config/DefaultEngine.ini
+++ b/Plunder_Party/Config/DefaultEngine.ini
@@ -5,12 +5,13 @@ GameName=Plunder_Party
 EditorStartupMap=/Game/ThirdPerson/Start_Screen.Start_Screen
 GameDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 ServerDefaultMap=/Game/ThirdPerson/Start_Screen.Start_Screen
+bOffsetPlayerGamepadIds=True
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
