--- a/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -448,7 +448,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Levels
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Widgets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -464,11 +464,11 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints/Widgets
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Levels
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Levels
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints/Widgets
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping/Interactable
 ContentBrowserDrawer.JumpMRU=/All/Game
@@ -553,12 +553,13 @@ ContentBrowserTab1.JumpMRU=/All/Game/Characters
 LastLevel=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -573,10 +574,10 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Widgets/WB_PauseMenu.WB_PauseMenu
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause.WB_Pause
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonPlayerController.BP_ThirdPersonPlayerController
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Widgets/WB_PauseMenu.WB_PauseMenu
+OpenAssetsAtExit=/Game/ThirdPerson/Levels/Lvl_ThirdPerson.Lvl_ThirdPerson:PersistentLevel.Lvl_ThirdPerson
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -593,24 +594,24 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/ThirdPerson/Levels/Lvl_ThirdPerson.Lvl_ThirdPerson", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
-MRUItem1=/Game/ThirdPerson/Levels/Start_Screen
+MRUItem0=/Game/ThirdPerson/Blueprints/Widgets/WB_PauseMenu
+MRUItem1=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
 MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
-MRUItem4=/Game/ThirdPerson/Blueprints/Widgets/WB_PauseMenu
-MRUItem5=/Game/ThirdPerson/Blueprints/Widgets/WB_InfoPage
-MRUItem6=/Game/Input/Actions/IA_Move
-MRUItem7=/Game/Input/IMC_Default
-MRUItem8=/Game/Input/Actions/IA_Jump
-MRUItem9=/Game/ThirdPerson/Materials/MI_Player_4
-MRUItem10=/Game/ThirdPerson/Materials/MI_Player_1
-MRUItem11=/Game/ThirdPerson/Blueprints/Widgets/WB_minigames
-MRUItem12=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
-MRUItem13=/Game/ThirdPerson/Materials/MI_Player_3
-MRUItem14=/Game/ThirdPerson/Materials/MI_Player_2
-MRUItem15=/Game/LevelPrototyping/Materials/MI_DefaultColorway
-MRUItem16=/Game/ThirdPerson/Blueprints/Widgets/WB_ScreenButtons
-MRUItem17=/Game/ThirdPerson/Blueprints/BP_ThirdPersonPlayerController
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonPlayerController
+MRUItem4=/Game/ThirdPerson/Levels/Start_Screen
+MRUItem5=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
+MRUItem6=/Game/ThirdPerson/Blueprints/Widgets/WB_InfoPage
+MRUItem7=/Game/Input/Actions/IA_Move
+MRUItem8=/Game/Input/IMC_Default
+MRUItem9=/Game/Input/Actions/IA_Jump
+MRUItem10=/Game/ThirdPerson/Materials/MI_Player_4
+MRUItem11=/Game/ThirdPerson/Materials/MI_Player_1
+MRUItem12=/Game/ThirdPerson/Blueprints/Widgets/WB_minigames
+MRUItem13=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
+MRUItem14=/Game/ThirdPerson/Materials/MI_Player_3
+MRUItem15=/Game/ThirdPerson/Materials/MI_Player_2
+MRUItem16=/Game/LevelPrototyping/Materials/MI_DefaultColorway
+MRUItem17=/Game/ThirdPerson/Blueprints/Widgets/WB_ScreenButtons
 MRUItem18=/Game/ThirdPerson/Blueprints/BP_CamSpring
 
 [DetailCategories]
@@ -1739,6 +1740,18 @@ Widget.Behavior=True
 Widget.Layout=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
+WB_PauseMenu_C.Appearance=True
+WB_PauseMenu_C.Input=True
+WB_PauseMenu_C.Interaction=True
+WB_PauseMenu_C.Performance=True
+WB_PauseMenu_C.Layout=True
+WB_PauseMenu_C.Behavior=True
+WB_PauseMenu_C.Render Transform=True
+WB_PauseMenu_C.Localization=True
+WB_PauseMenu_C.Rendering=True
+WB_PauseMenu_C.Navigation=True
+WB_PauseMenu_C.Designer=True
+WB_PauseMenu_C.Accessibility=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
