--- a/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -60,8 +60,8 @@ CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 bEnableMiddleEllipsis=True
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=1912
-NewWindowHeight=970
+NewWindowWidth=1914
+NewWindowHeight=992
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -108,7 +108,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=0,Y=0)
+NewWindowPosition=(X=3840,Y=314)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -135,13 +135,13 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1912,Y=970)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@UL04PCJL17-03
 LastExecutedLaunchName=UL04PCJL17-03
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=3840,Y=314)
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -433,6 +433,8 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface 
 K2Node_VariableGet=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
 Character=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
 K2Node_InputKey=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
+ProgressBar=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
+K2Node_VariableSet=CameraComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Input/Actions
@@ -448,7 +450,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Levels
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Widgets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -464,9 +466,9 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints/Widgets
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping/Materials
@@ -555,6 +557,8 @@ LastLevel=/Game/ThirdPerson/Start_Screen
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
@@ -562,18 +566,17 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause.WB_Pause
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -590,20 +593,20 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/ThirdPerson/Levels/Lvl_ThirdPerson.Lvl_ThirdPerson", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Levels/Start_Screen
-MRUItem1=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
-MRUItem2=/Game/ThirdPerson/Blueprints/Widgets/WB_minigames
-MRUItem3=/Game/ThirdPerson/Blueprints/Widgets/WB_PauseMenu
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonPlayerController
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
-MRUItem7=/Game/ThirdPerson/Blueprints/Widgets/WB_InfoPage
-MRUItem8=/Game/Input/Actions/IA_Move
-MRUItem9=/Game/Input/IMC_Default
-MRUItem10=/Game/Input/Actions/IA_Jump
-MRUItem11=/Game/ThirdPerson/Materials/MI_Player_4
-MRUItem12=/Game/ThirdPerson/Materials/MI_Player_1
-MRUItem13=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
+MRUItem0=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
+MRUItem1=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
+MRUItem2=/Game/ThirdPerson/Levels/Start_Screen
+MRUItem3=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
+MRUItem4=/Game/ThirdPerson/Blueprints/Widgets/WB_minigames
+MRUItem5=/Game/ThirdPerson/Blueprints/Widgets/WB_PauseMenu
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonPlayerController
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/Blueprints/Widgets/WB_InfoPage
+MRUItem9=/Game/Input/Actions/IA_Move
+MRUItem10=/Game/Input/IMC_Default
+MRUItem11=/Game/Input/Actions/IA_Jump
+MRUItem12=/Game/ThirdPerson/Materials/MI_Player_4
+MRUItem13=/Game/ThirdPerson/Materials/MI_Player_1
 MRUItem14=/Game/ThirdPerson/Materials/MI_Player_3
 MRUItem15=/Game/ThirdPerson/Materials/MI_Player_2
 MRUItem16=/Game/LevelPrototyping/Materials/MI_DefaultColorway
@@ -643,7 +646,7 @@ Screen_Buttons_C.Navigation=True
 Screen_Buttons_C.Designer=True
 Screen_Buttons_C.Accessibility=True
 Border.Content=False
-Border.Appearance=True
+Border.Appearance=False
 Border.Accessibility=False
 Border.Behavior=False
 Border.Render Transform=False
@@ -1086,7 +1089,7 @@ BackgroundBlur.Performance=True
 BackgroundBlur.Rendering=True
 BackgroundBlur.Navigation=True
 BackgroundBlur.Localization=True
-Border.Layout=True
+Border.Layout=False
 WB_ScreenButtons_C.Appearance=True
 WB_ScreenButtons_C.Input=True
 WB_ScreenButtons_C.Interaction=True
@@ -1760,6 +1763,17 @@ WB_minigames_C.Rendering=True
 WB_minigames_C.Navigation=True
 WB_minigames_C.Designer=True
 WB_minigames_C.Accessibility=True
+K2Node_VariableSet.Events=True
+WidgetSwitcher.Layout=True
+WidgetSwitcher.Switcher=True
+WidgetSwitcher.Accessibility=True
+WidgetSwitcher.Behavior=True
+WidgetSwitcher.Render Transform=True
+WidgetSwitcher.Performance=True
+WidgetSwitcher.Rendering=True
+WidgetSwitcher.Navigation=True
+WidgetSwitcher.Localization=True
+WB_Pause_C.Default=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1904,7 +1918,7 @@ Color13=(R=0.000000,G=0.000000,B=0.526042,A=1.000000)
 
 [DetailPropertyExpansion]
 Button="\"Object.Appearance.WidgetStyle.Hovered\" "
-ContentWidget=
+ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Widget Switcher Slot.Padding\" "
 PanelWidget=
 Widget=
 Visual=
@@ -1930,7 +1944,7 @@ FractureModeCustomizationSettings="\"Object.Fracture Mode.Fracture Mode|UI Custo
 ModelingToolsModeCustomizationSettings="\"Object.Modeling Mode.Modeling Mode|UI Customization\" \"Object.Modeling Mode.Modeling Mode|Tool Assets\" \"Object.Modeling Mode.Modeling Mode|Mesh Element Selection Mode\" "
 ModelingComponentsEditorSettings="\"Object.Modeling Tools.Modeling Tools|Work Plane Configuration\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
-Border=
+Border="\"Object.Layout.Slot.Object.Layout.Layout|Widget Switcher Slot.Padding\" "
 MassSettings="\"Object.Mass\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.DepthOfFieldMatteBoxFlags\" \"Object.PostProcess.PostProcessSettings.DepthOfFieldMatteBoxFlags.DepthOfFieldMatteBoxFlags[0]\" \"Object.PostProcess.PostProcessSettings.DepthOfFieldMatteBoxFlags.DepthOfFieldMatteBoxFlags[1]\" \"Object.PostProcess.PostProcessSettings.DepthOfFieldMatteBoxFlags.DepthOfFieldMatteBoxFlags[2]\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
 SceneComponent=
@@ -1950,6 +1964,7 @@ DeveloperSettingsBackedByCVars=
 EditorExperimentalSettings="\"Object.Blueprints\" "
 SkeletalMeshComponent=
 SkinnedMeshComponent=
+VerticalBox=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1974,8 +1989,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2032,7 +2047,7 @@ GraphEditorQuickJumps=()
 /Game/ThirdPerson/Levels/Start_Screen.Start_Screen:PersistentLevel.Start_Screen=0
 
 [RootWindow]
-ScreenPosition=X=1068.000 Y=204.000
+ScreenPosition=X=4464.000 Y=468.000
 WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
