--- a/Plunder_Party/Plunder_Party.uproject
+++ b/Plunder_Party/Plunder_Party.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{D8D12F06-4C5A-FF74-4051-87B4B22E3C2A}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
