--- a/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plunder_Party/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -570,18 +570,18 @@ GlobalAssetPicker.ColumnViewColumnsManuallyChangedOnce=False
 GlobalAssetPicker.ListHiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
+LastLevel=/Game/ThirdPerson/Start_Screen
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -596,9 +596,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GmDrunkenPirate.BP_GmDrunkenPirate
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars.WB_Player_Bars
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause.WB_Pause
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -615,14 +612,14 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/ThirdPerson/Levels/Lvl_ThirdPerson.Lvl_ThirdPerson", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Materials/MI_Player_4
-MRUItem1=/Game/ThirdPerson/Materials/MI_Player_3
-MRUItem2=/Game/ThirdPerson/Materials/MI_Player_2
-MRUItem3=/Game/ThirdPerson/Materials/MI_Player_1
-MRUItem4=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
-MRUItem5=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPerson
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_GmDrunkenPirate
+MRUItem0=/Game/ThirdPerson/Blueprints/Widgets/WB_Pause
+MRUItem1=/Game/ThirdPerson/Blueprints/Widgets/WB_Player_Bars
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_GmDrunkenPirate
+MRUItem3=/Game/ThirdPerson/Materials/MI_Player_4
+MRUItem4=/Game/ThirdPerson/Materials/MI_Player_3
+MRUItem5=/Game/ThirdPerson/Materials/MI_Player_2
+MRUItem6=/Game/ThirdPerson/Materials/MI_Player_1
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPerson
 MRUItem8=/Game/ThirdPerson/Blueprints/ccom
 MRUItem9=/Game/ThirdPerson/Levels/Lvl_ThirdPerson
 MRUItem10=/Game/ThirdPerson/Levels/Start_Screen
@@ -2159,8 +2156,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2220,7 +2217,7 @@ GraphEditorQuickJumps=()
 /Game/ThirdPerson/Blueprints/BP_ThirdPerson.BP_ThirdPerson=0
 
 [RootWindow]
-ScreenPosition=X=2256.000 Y=50.000
+ScreenPosition=X=336.000 Y=0.000
 WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
@@ -3626,6 +3623,7 @@ PerfCounters.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
